# ocaml-varint

./: .gitignore  CHANGES.md  Makefile  README.md  dune-project  ocaml-varint.opam  varint.install  varint.opam
pkg/: pkg.ml
src/: .merlin  dune  jbuild  varint.ml  varint.mli
test/: .merlin  dune  test.ml  varint_test.ml
