opam-version: "1.2"
maintainer: "flatmapds@gmail.com"
authors: ["Sam Riyad"]
tags: ["mirage" "encoding"]
license: "MIT"
homepage: "github.com/XnuKernPoll/ocaml-varint"
          
version: 1.0
         
dev-repo: "github.com/XnuKernPoll/ocaml-varint"
          
build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
depends: [
  "jbuilder" {build}
  "mstruct"
]
