opam-version: "2.0"
maintainer: "Sam Riyad"
authors: ["Sam Riyad"]
tags: []
license: "MIT"
version: "0.2"
         
homepage: ""
dev-repo: ""
bug-reports: ""
doc: ""
build: [
  ["dune" "subst" ] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.02"}
  "dune"
]
synopsis: "A library for encoding varints"
description: """
A library for encoding varints
"""
